infra/asm/asm-gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    istio.io/rev: asm-managed
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: asm-ingressgateway
  namespace: gateways
  labels:
    app: asm-ingressgateway
    asm: ingressgateway
spec:
  type: ClusterIP
  selector:
    asm: ingressgateway
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asm-ingressgateway
  namespace: gateways
  labels:
    app: asm-ingressgateway
    asm: ingressgateway
spec:
  selector:
    matchLabels:
      app: asm-ingressgateway
      asm: ingressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: asm-ingressgateway
        asm: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
---
apiVersion: v1
kind: Service
metadata:
  name: asm-egressgateway
  namespace: gateways
  labels:
    app: asm-egressgateway
    asm: egressgateway
spec:
  type: ClusterIP
  selector:
    asm: egressgateway
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asm-egressgateway
  namespace: gateways
  labels:
    app: asm-egressgateway
    asm: egressgateway
spec:
  selector:
    matchLabels:
      app: asm-egressgateway
      asm: egressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: asm-egressgateway
        asm: egressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
---
apiVersion: v1
kind: Service
metadata:
  name: asm-eastwestgateway
  namespace: gateways
  labels:
    app: asm-eastwestgateway
    asm: eastwestgateway
    topology.istio.io/network: default
spec:
  type: ClusterIP
  selector:
    asm: eastwestgateway
  ports:
  - port: 15021
    name: status-port
    targetPort: 15021
  - port: 15443
    name: tls
    targetPort: 15443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asm-eastwestgateway
  namespace: gateways
  labels:
    app: asm-eastwestgateway
    asm: eastwestgateway
spec:
  selector:
    matchLabels:
      app: asm-eastwestgateway
      asm: eastwestgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: asm-eastwestgateway
        asm: eastwestgateway
        topology.istio.io/network: default
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
