infra/asm/routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-httproute
  namespace: asm-ingress-gw
  annotations:
    configmanagement.gke.io/cluster-selector: selector-config
spec:
  parentRefs:
  - name: external-http
    namespace: asm-ingress-gw
    sectionName: http
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: asm-ingressgateway
      port: 80
